changed bid resource

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -16,20 +16,12 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :lister %><br>
-    <%= f.text_field :lister %>
-  </div>
-  <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :bid %><br>
-    <%= f.number_field :bid %>
-  </div>
-  <div class="field">
-    <%= f.label :bidder %><br>
-    <%= f.text_area :bidder %>
+    <%= f.label :starting_bid %><br>
+    <%= f.number_field :starting_bid %>
   </div>
   <div class="field">
     <%= f.label :deadline %><br>
