--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
-
+<h1>Hello, <%= current_user.name %></h1>
 <h1>Listing Products</h1>
 
-<table>
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
       <th>Title</th>
       <th>Lister</th>
       <th>Description</th>
-      <th>Bid</th>
+      <th>Starting Bid</th>
+      <th>Current Highest Bid</th>
       <th>Bidder</th>
       <th>Deadline</th>
       <th colspan="3"></th>
@@ -19,19 +20,32 @@
     <% @products.each do |product| %>
       <tr>
         <td><%= product.title %></td>
-        <td><%= product.lister %></td>
+        <td><%= product.user.name %></td>
         <td><%= product.description %></td>
-        <td><%= product.bid %></td>
-        <td><%= product.bidder %></td>
+        <td><%= number_to_currency product.starting_bid %></td>
+        <td><%= number_to_currency product.bid.try(:amt) %></td>
+        <td><%= product.bid.try(:user).try(:name) %></td>
         <td><%= product.deadline %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Bid', product %>
+          <%= link_to 'Edit', edit_product_path(product) %>
+          <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+
+<% if user_signed_in? %>
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+  </li>
+<% else %>
+  <li>
+  <%= link_to('Login', new_user_session_path)  %>  
+  </li>
+<% end %>
 
 <%= link_to 'New Product', new_product_path %>
