--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,9 +27,12 @@
         <td><%= product.bid.try(:user).try(:name) %></td>
         <td><%= product.deadline %></td>
         <td>
-          <%= link_to 'Bid', product %>
+          <% if product.user.name == current_user.name %>
           <%= link_to 'Edit', edit_product_path(product) %>
           <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% else %>
+          <%= link_to 'Bid', product %>
+          <% end %>
         </td>
       </tr>
     <% end %>
