--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,8 @@
 <h1>Hello, <%= current_user.name %></h1>
 <h1>Listing Products</h1>
 
+<%= link_to 'Add New Auction Item', new_product_path, :class => "btn btn-primary" %>
+<p></p>
 <table class="table table-striped table-bordered">
   <thead>
     <tr>
@@ -31,7 +33,7 @@
           <%= link_to 'Edit', edit_product_path(product) %>
           <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %>
           <% else %>
-          <%= link_to 'Bid', product %>
+          <%= link_to 'Bid', product, :class => "btn btn-primary" %>
           <% end %>
         </td>
       </tr>
@@ -42,13 +44,7 @@
 <br>
 
 <% if user_signed_in? %>
-  <li>
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-  </li>
 <% else %>
-  <li>
   <%= link_to('Login', new_user_session_path)  %>  
-  </li>
 <% end %>
-
-<%= link_to 'New Product', new_product_path %>
