--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+@import "./**/*";
+// @import 'scaffolds';
+// @import 'products';
+// @import 'bids';
