--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
                         <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="/users/password/new">Forgot password?</a></div>
                     </div>
 
-                    <div style=padding-top:30px class="panel-body" >
+                    <div style="padding-top:30px;" class="panel-body" >
                       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                         <%= devise_error_messages! %>
 
