--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,7 +27,8 @@
     <%= f.label :deadline %><br>
     <%= f.datetime_select :deadline %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+    Submit
+    <% end %>
+<p></p>
 <% end %>
