--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -3,3 +3,8 @@ padding-top:30px;
 background-image: url('mountains.jpg'); 
 }
 
+body#devise-registrations-new {
+padding-top:30px;
+background-image: url('mountains.jpg'); 
+}
+
