--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,15 @@
 </head>
 
 <body id=<%= params[:controller].tr('/', '-') + '-' + params[:action].tr('/', '-') %>>
+<ul class="nav nav-tabs">
+  <li role="presentation"><a href="/products/">Home</a></li>
+  <li role="presentation"><a href="/auction/about">About</a></li>
+</ul>
 
 <div class="container">
+
 	<%= yield %>
 </div>
 
 </body>
-
 </html>
