added mylistings page

--- a/app/assets/stylesheets/auction.scss
+++ b/app/assets/stylesheets/auction.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Auction controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body#auction-about {
+background-image: url('about.jpg'); 
+}
