--- a/app/views/auction/about.html.erb
+++ b/app/views/auction/about.html.erb
@@ -1,9 +1,14 @@
+<ul class="nav nav-tabs">
+  <li role="presentation"><a href="/products/">Home</a></li>
+  <li role="presentation"><a href="/auction/about">About</a></li>
+  <li role="presentation"><a href="/products/my_products">My Listings</a></li>
+</ul>
 <p id="notice"><%= notice %></p>
 <div class="container">
         <div id="about" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <div class="panel panel-info" >
                     <div class="panel-heading">
-                        <div class="panel-title">About this auction</div>
+                        <div class="panel-title">Raising funds for Children's Orphanage</div>
                     </div>
 
                     <div class="panel-body" >
