--- a/app/views/products/my_products.html.erb
+++ b/app/views/products/my_products.html.erb
@@ -3,18 +3,11 @@
   <li role="presentation"><a href="/auction/about">About</a></li>
   <li role="presentation"><a href="/products/my_products">My Listings</a></li>
 </ul>
-<p id="notice"><%= notice %></p>
-
-<h2>Hello, <%= current_user.name %></h2>
-<h2>Here are all the auction items available</h2>
+<h2>My Current Listings</h2>
 
 <p></p>
 <%= link_to 'Add New Auction Item', new_product_path, :class => "btn btn-primary" %>
 <p></p>
-
-
-<%#= link_to 'Show my products', products_path(user_id: current_user.id) %>
-
 
 <table class="table table-striped table-bordered">
   <thead>
@@ -53,18 +46,9 @@
   </tbody>
 </table>
 <br>
-<p><strong>Instructions:</strong>
-<li>You have to bid more than the current amount</li>
-<li>You may only bid on items listed by others, and not your own</li>
-<li>You can list as many items to put up for auction</li>
-<li>Any derogatory listings will be taken down immediately</li>
-<br>
 
 <% if user_signed_in? %>
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
 <% else %>
   <%= link_to('Login', new_user_session_path)  %>  
 <% end %>
-
-
-
