--- a/app/assets/stylesheets/auction.scss
+++ b/app/assets/stylesheets/auction.scss
@@ -2,5 +2,5 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body#auction-about {
-background-image: url('about.jpg'); 
+background-image: url('dimsum.jpg');
 }
