--- a/app/views/auction/about.html.erb
+++ b/app/views/auction/about.html.erb
@@ -8,13 +8,12 @@
         <div id="about" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <div class="panel panel-info" >
                     <div class="panel-heading">
-                        <div class="panel-title">Raising funds for Children's Orphanage</div>
+                        <div class="panel-title">Using your talents and skills to serve each other</div>
                     </div>
 
                     <div class="panel-body" >
-                    	This is a crowdfunding-styled auction to collectively raise funds for a non-profit organisation. But this platform isn't just about raising money. It is also about affirming each and every one of us that we have unique talents which we can use to bless others with. We may not be affluent, but we can use what little we have to impact others regardless.
+                    	This is a crowdfunding-styled auction to collectively raise funds for a cause. But this platform isn't just about raising money. It is also about affirming each and every one of us that we have unique talents which we can use to bless others with. We may not be affluent, but we can use what little we have to impact others regardless.
                     </div>
             </div>
         </div>
 </div>
-
