--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,12 @@
 <h2>Hello, <%= current_user.name %></h2>
 <h2>Here are all the auction items available</h2>
 
+<h3>Total raised: <%= number_to_currency @products.inject(0){|sum, product| sum + (product.bid.try(:amt) || 0) }  %></h3>
+
+<a href="#" class="btn btn-info" data-toggle="modal" data-target="#myModal"> 
+  <h3>Instructions</h3>
+</a>
+
 <p></p>
 <%= link_to 'Add New Auction Item', new_product_path, :class => "btn btn-primary" %>
 <p></p>
@@ -25,7 +31,6 @@
       <th>Starting Bid</th>
       <th>Current Highest Bid</th>
       <th>Bidder</th>
-      <th>Deadline</th>
       <th colspan="3">Actions</th>
     </tr>
   </thead>
@@ -39,7 +44,6 @@
         <td><%= number_to_currency product.starting_bid %></td>
         <td><%= number_to_currency product.bid.try(:amt) %></td>
         <td><%= product.bid.try(:user).try(:name) %></td>
-        <td><%= product.deadline %></td>
         <td>
           <% if product.user.name == current_user.name %>
           <%= link_to 'Edit', edit_product_path(product) %>
@@ -52,12 +56,7 @@
     <% end %>
   </tbody>
 </table>
-<br>
-<p><strong>Instructions:</strong>
-<li>You have to bid more than the current amount</li>
-<li>You may only bid on items listed by others, and not your own</li>
-<li>You can list as many items to put up for auction</li>
-<li>Any derogatory listings will be taken down immediately</li>
+
 <br>
 
 <% if user_signed_in? %>
@@ -65,6 +64,30 @@
 <% else %>
   <%= link_to('Login', new_user_session_path)  %>  
 <% end %>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Instructions</h4>
+      </div>
+      <div class="modal-body">
+        <li>You have to bid more than the current amount</li>
+        <li>You may only bid on items listed by others, and not your own</li>
+        <li>You can list as many items to put up for auction</li>
+        <li>Any derogatory listings will be taken down immediately</li>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
