--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,7 +23,7 @@
     <%= f.label :starting_bid %><br>
     <%= f.number_field :starting_bid %>
   </div>
-    <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
+    <%= button_tag(type: 'submit', class: "btn btn-bid") do %>
     Submit
     <% end %>
 <p></p>
