--- a/app/views/products/my_products.html.erb
+++ b/app/views/products/my_products.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs tabs-style">
   <li role="presentation"><a href="/products/">Home</a></li>
   <li role="presentation"><a href="/auction/about">About</a></li>
   <li role="presentation"><a href="/products/my_products">My Listings</a></li>
@@ -12,7 +12,7 @@
 <h2>My Current Listings</h2>
 
 <p></p>
-<%= link_to 'Add New Auction Item', new_product_path, :class => "btn btn-primary" %>
+<%= link_to 'Auction My Talent', new_product_path, :class => "btn btn-bid" %>
 <p></p>
 
 <table class="table table-striped table-bordered">
@@ -42,7 +42,7 @@
           <%= link_to 'Edit', edit_product_path(product) %>
           <%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %>
           <% else %>
-          <%= link_to 'Bid', product, :class => "btn btn-primary" %>
+          <%= link_to 'Bid', product, :class => "btn btn-bid" %>
           <% end %>
         </td>
       </tr>
