--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -33,7 +33,7 @@
           <div class="thumbnail">
             <!-- <img src="http://placehold.it/500x250/EEE"> -->
               <div class="caption">
-                <h4><%= product.title %></h4>Bid
+                <h4><%= product.title %></h4>
                 <p style="color:#757575"><%= product.user.name %></p>
                 <div class="preview-text">
                 <p><%= product.description %></p>
