--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,8 @@
-<h1>New Auction Item</h1>
+<head>
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+</head>
+<h1 style="color:#ff6f69; text-align: center;">Post a Blessing!<i class="em em-gift_heart"></i></h1>
+<br>
 
 <%= render 'form' %>
 
