--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Edit Auction Item</h1>
+<h1 style="color:#ff6f69; text-align: center;">Edit Auction Item<i class="em em-gift_heart"></i></h1>
+<br>
 
 <%= render 'form' %>
 
